<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<SwitchPreference-->
        <!--android:defaultValue="true"-->
        <!--android:key="example_switch"-->
        <!--android:summary="@string/pref_description_social_recommendations"-->
        <!--android:title="@string/pref_title_social_recommendations"/>-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_city"
        android:inputType="textCapWords"
        android:key="city"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_your_city"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_search_articles"
        android:entryValues="@array/pref_search_articles_list_values"
        android:key="search_articles"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_search_articles"/>
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_select_language"
        android:entryValues="@array/pref_select_language_values"
        android:key="select_language"
        android:summary="@string/find_sources_that_display_news_in_a_specific_language"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_select_title_language"/>



</PreferenceScreen>
